feat:user-form-ui

--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -1,2 +1,8 @@
 //font-family
 $font-family-base: 'Inter', sans-serif;
+
+//paragraph margin
+$paragraph-margin-bottom: 0;
+
+//heading margin
+$headings-margin-bottom: 0;
