--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 //import google fonts
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Sacramento&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Sacramento&family=Roboto:wght@400;500;700&display=swap');
 
 //impot icons
 @import "~@/assets/icons/style.css";
