feat:mainpage-ui

--- a/src/assets/scss/layouts/_home.scss
+++ b/src/assets/scss/layouts/_home.scss
@@ -2,6 +2,14 @@
     font-family: 'Sacramento', cursive;
 }
 
+.copyright {
+    height: 30px;
+
+    span {
+        font-family: 'Sacramento', cursive;
+    }
+}
+
 .profile-skeleton-wrapper {
     height: 50px;
     width: 50px;
