--- a/src/assets/scss/layouts/_home.scss
+++ b/src/assets/scss/layouts/_home.scss
@@ -25,14 +25,47 @@
 .name-skeleton {
     width: 150px;
     height: 20px;
+
+    @include media-breakpoint-down(sm) {
+        width: 100px;
+    }
+
+    @media (min-width: 768px) and (max-width: 820px) {
+        width: 120px;
+    }
+
 }
 
 .designation-skeleton {
     width: 200px;
     height: 15px;
+
+    @include media-breakpoint-down(sm) {
+        width: 150px;
+    }
+
+    @media (min-width: 768px) and (max-width: 820px) {
+        width: 170px;
+    }
+
+    @media (min-width: 320px) and (max-width: 375px) {
+        width: 120px;
+    }
 }
 
 .email-contact-skeleton {
     width: 250px;
     height: 12px;
+
+    @include media-breakpoint-down(sm) {
+        width: 200px;
+    }
+
+    @media (min-width: 768px) and (max-width: 820px) {
+        width: 220px;
+    }
+
+    @media (min-width: 320px) and (max-width: 375px) {
+        width: 150px;
+    }
 }
