remove some fields

--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -1,5 +1,5 @@
 //font-family
-$font-family-base: 'Arial', sans-serif;
+$font-family-base: Calibri, sans-serif;
 
 //paragraph margin
 $paragraph-margin-bottom: 0;
